[package]
name = "cw-clearable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = { workspace = true }

[dev-dependencies]
cw-storage-plus = { workspace = true }
cosmwasm-std = { workspace = true }
