[package]
name = "cw-clearable"
version = "0.2.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Helper enum that allows to clear Optional state items"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }

[dev-dependencies]
cw-storage-plus = { workspace = true }
