[package]
name = "cw-blob"
version = "0.1.3"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
description = "This contract expected to be used just for migration with predictable address"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-orch = { version = "0.25" }
cosmrs = "0.20.0"
