[package]
name = "cw-blob"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
description = "This contract expected to be used just for migration with predictable address"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-orch = { version = "0.30",   git = "https://github.com/permissionlessweb/cw-orchestrator" }
cosmrs  = { version = "0.23.0", git = "https://github.com/permissionlessweb/cosmos-rust" }
