[package]
name = "cw-test-migrated"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
description = "This contract used for testing migration from cw-blob with predictable address"

[lib]
crate-type = ["cdylib", "rlib"]

# Daemon test requires local juno to be running, after that use `cargo test --test daemon`
[[test]]
name = "daemon"
test = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-orch = { version = "0.25" }
cw-orch-daemon = { version = "0.25.0" }

[dev-dependencies]
cw-multi-test = { version = "2.1", features = ["cosmwasm_2_0"] }
cw-blob = { path = "../cw-blob" }
cosmrs = "0.20.0"
