[package]
name = "cw-test-migrated"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish = false
description = "This contract used for testing migration from cw-blob with predictable address"

[lib]
crate-type = ["cdylib", "rlib"]

# Daemon test requires local juno to be running, after that use `cargo test --test daemon`
[[test]]
name = "daemon"
test = false

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-orch = { version = "0.25" }
cw-orch-daemon = { version = "0.25.0" }
cw-blob = { path = "../cw-blob" }
cw-orch-clone-testing = { version = "0.7.1" }

[dev-dependencies]
cosmrs = "0.20.0"
cw-storage-plus = { workspace = true }
