[package]
name = "cw-test-migrated"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish = false
description = "This contract used for testing migration from cw-blob with predictable address"

[lib]
crate-type = ["cdylib", "rlib"]

# Daemon test requires local juno to be running, after that use `cargo test --test daemon`
[[test]]
name = "daemon"
test = false

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-orch = { version = "0.30", git = "https://github.com/permissionlessweb/cw-orchestrator" }
cw-orch-daemon = { version = "0.29.0", git = "https://github.com/permissionlessweb/cw-orchestrator" }
cw-blob = { path = "../cw-blob" }
cw-orch-clone-testing = { package = "clone-cw-multi-test", version = "3.0.1", git = "https://github.com/permissionlessweb/cw-multi-test-fork", branch = "cw3/adapt_for_local_execution" }

[dev-dependencies]
cosmrs  = { version = "0.23.0", git = "https://github.com/permissionlessweb/cosmos-rust" }
cw-storage-plus = { workspace = true }
